workloads/local/chainlink.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chainlink
spec:
  selector:
    matchLabels:
      app: chainlink
  replicas: 1
  template:
    metadata:
      labels:
        app: chainlink
        role: chainlink
        environment: production
    spec:
      containers:
        - name: chainlink
          image: smartcontract/chainlink:1.1.1
          args: ["local", "n", "-p",  "/chainlink/.password", "-a", "/chainlink/.api"]
          ports:
            - containerPort: 6688
            - containerPort: 11972
            - containerPort: 11973
          volumeMounts:
            - name: api-volume
              mountPath: /chainlink/.api
              subPath: .api
            - name: password-volume
              mountPath: /chainlink/.password
              subPath: .password
          resources:
            requests:
              cpu: 3000m
              memory: 6000Mi
      volumes:
        - name: api-volume
          secret:
            secretName: api-env
        - name: password-volume
          secret:
            secretName: password-env
