workloads/local/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: listening
      port: 5432
      targetPort: 5432
      protocol: TCP

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
        role: postgres
        environment: local
    spec:
      containers:
        - name: postgres        
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data/pgdata
          resources:
            requests:
              cpu: 2000m
              memory: 8000Mi

      volumes:
      - name: postgres-data
        hostPath:
          path: /run/desktop/mnt/host/f/kubernetes/data/postgres-data
          type: DirectoryOrCreate
